# toil-tracker

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  demo.db  pyproject.toml  setup.py  test_devops.py  toil_detector.py
.github/workflows/: ci.yml
0.1.1/: README.md  TESTING_REPORT.md  enhanced_cli.py  enhanced_toil_detector.py  requirements.txt  setup.py  simple_test.py  test_v0.1.1.py  toil-config.yaml  toil.db  toil_analytics.py  toil_analytics_simple.py  toil_integrations.py  toil_performance.py
tests/: test_basic.py
toil_tracker/: LICENSE  MANIFEST.in  README.md  cli.py  dashboard.py  demo_output.py  devops_test.db  quick_test.py  requirements.txt  test_public_repos.py
toil_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
toil_tracker/toil_tracker/: __init__.py  cli.py
toil_tracker/toil_tracker.egg-info/: top_level.txt
